<resources>
    <string name="app_name">GameProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">E-mail</string>
    <string name="presentation">Write a short presentation here. (optional)</string>
    <string name="title">Title</string>
    <string name="context">Write your context here.</string>
    <string name="rules">Write here the rules you want your players to respect.</string>
    <string name="write_here">Write here</string>
    <string name="visibility">Visibility:</string>
    <string name="visibility_public">Anyone may see your context and access your room.</string>
    <string name="visibility_protected">Anyone may see your context but they need to ask your permission to access your room.</string>
    <string name="visibility_private">Only invited people may see your context and access your room.</string>
    <string name="play_permission">Play permission:</string>
    <string name="play_private">Manual validation. You validate yourself characters before they join the game.</string>
    <string name="play_public">Auto validation. Any reader may add a character into the game, the validation is automatic.</string>
    <string name="manager">Room Managers - they moderate the room and accept new players.</string>
    <string name="reader">Readers - they may access your room.</string>
    <string name="character_name">Your character\'s name</string>
    <string name="character_background">Write here your character\'s background. What do we need to know about them?</string>
    <string name="character_avatar">If you want your character to be illustrated, copy the url of your avatar here. Please avoid large or heavy images.</string>
    <string name="requesting_player">Here you may validate new characters into your room</string>
    <string name="player_category">Player: </string>
    <string name="add_text">Write here username</string>
    <string name="add_button">Add</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="login_button">Log in</string>
    <string name="search_button">Look for</string>
    <string name="create_room_button">Create a new room</string>
    <string name="validate_button">Validate</string>
    <string name="cancel_button">Cancel</string>
    <string name="reject_button">Reject</string>
    <string name="join_button">Join</string>
    <string name="request_access_button">Request access</string>
    <string name="add_character_button">Add a character</string>
    <string name="create_character_button">Create a new character</string>
    <string name="manage_requesting_player_button">New character requests</string>
    <string name="send_button">Send</string>
</resources>
