<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.interface3.sroch.gameproject.DisplayRoomActivity">

    <TextView
        android:layout_weight="1"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:layout_weight="1"
        android:id="@+id/treat_request"
        android:onClick="doOnClick"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />
    <Button
        android:layout_weight="1"
        android:id="@+id/add_character"
        android:text="@string/add_character_button"
        android:onClick="doOnClick"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />
    <ListView
        android:layout_weight="10"
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <EditText
        android:layout_weight="1"
        android:id="@+id/write_message"
        android:hint="@string/write_here"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:layout_weight="1"
        android:id="@+id/send"
        android:text="@string/send_button"
        android:onClick="doOnClick"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />
</LinearLayout>
